--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -26,8 +26,8 @@
 
 {% for ac in academy %}
 <div class="">
-  <div class="w3-third w3-container w3-margin-bottom">
-    <img src="{{ ac.logo.url }}" alt="Norway" style="width:100%" class="w3-hover-opacity">
+  <div class="w3-third w3-container w3-margin-bottom flex justify-content-center">
+    <img src="{{ ac.logo.url }}" alt="Norway" style="width:100%" class="w3-hover-opacity ml-20">
     <div class="w3-container w3-white">
       <p><b>{{ ac.Ac_name }}</b></p>
 <p>{{ ac.description | slice:"0:100" }} </p>
@@ -47,23 +47,7 @@
       
   </p> {% endfor %} <hr>
     
-  <!-- <h4>Totala Number of students</h4>
-  <!-- Progress bars / Skills 
-  <p>Photography</p>
-  <div class="w3-grey">
-    <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:95%">95%</div>
-  </div>
-  <p>Web Design</p>
-  <div class="w3-grey">
-    <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:85%">85%</div>
-  </div>
-  <p>Photoshop</p>
-  <div class="w3-grey">
-    <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:80%">80%</div>
-  </div>
-  <p>
-   
-  </p> -->
+
   <hr>
   
   <h4>Payments and courses</h4>
