--- a/users/templates/users/inde.html
+++ b/users/templates/users/inde.html
@@ -5,21 +5,31 @@
 {% for m in messages %}
   <h1>{{m}}</h1>
 {% endfor %}
-{% for ac in academy %}
-<div class="">
-  
-    <form action="academic-detail" method="post">
-      {% csrf_token %}
-    <div class="w3-third w3-container w3-margin-bottom"><input type="text" name="name" id="" value="{{ac.Ac_name}}" hidden>
-     <button type="submit"> <img src="{{ ac.logo.url }}" alt="Norway" style="width:100%; height: 100%" class="w3-hover-opacity"></button>
-     </form>  <div class="w3-container w3-white">
-      <p><b>{{ ac.Ac_name }}</b></p>
-<p id="less" style="display: block;">{{ ac.description | slice:"0:100" }} </p>
-
-<p>Webite Link for <a href="{{ ac.official_web }}"> {{ ac.Ac_name }} </a>
+{% for ac in academy %}{% if ac.Ac_name != 'staff' %}
+<div class="col-md-4 mb-4 " style="background-color: white; margin: 0 1rem; border-radius: 2rem">
+    
+    
+      
+   
+      
+  <div class="card">
+    <a href="{% url 'academic-detail'  ac.Ac_name %}">
+    <div style="display: flex; justify-content:center; padding: 0 0;">
+    <img src="{{ ac.logo.url }}" class="card-img-top h-75  " alt="Logo">
+  </div>
+</a>
+    <div class="card-body">
+      <h5 class="card-title">{{ ac.Ac_name }}</h5>
+      <p class="card-text">{{ ac.description | slice:"30" }}</p>
+      <p>Website Link for <a href="{{ ac.official_web }}">{{ ac.Ac_name }}</a></p>
     </div>
   </div>
-  {% endfor %}
+  
+
+</div> 
+{% endif %}
+
+{% endfor %}
 
 
  
