--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -48,7 +48,9 @@
             <a href="{% url 'home' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-text-teal"><i class="fa fa-th-large fa-fw w3-margin-right"></i>Home</a> 
             <a href="{% url 'add-course' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-book fa-fw w3-margin-right"></i>Courses</a> 
             <a href="" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user-plus fa-fw w3-margin-right"></i>Instructor</a> 
-            <a href="{% url 'addStudent' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user-plus fa-fw w3-margin-right"></i>student</a> 
+            <a href="{% url 'addStudent' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user-plus fa-fw w3-margin-right"></i>validate recipt</a> 
+            <a href="{% url 'studlist' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-user-plus fa-fw w3-margin-right"></i>students List</a> 
+
             <a href="" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-plus fa-fw w3-margin-right"></i>Assign students</a> 
             <a href="{% url 'updateProfile' %}" onclick="w3_close()" class="w3-bar-item w3-button w3-padding"><i class="fa fa-upload fa-fw w3-margin-right"></i>update profile</a> 
 
